--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 body {
   min-height: 100%;
   min-width: 100%;
-  background: linear-gradient(pink, violet);
+  background: linear-gradient(rgb(228, 20, 55), rgb(238, 155, 238));
 }
 
 button {
