--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
+
+
 html {
   height: 100%;
   width: 100%;
-  font-family: "Titillium Web", sans-serif;
+  /* font-family: "Titillium Web", sans-serif; */
+  font-family: 'Permanent Marker';
+
+
 }
 
 body {
-  min-height: 100%;
-  min-width: 100%;
-  background: linear-gradient(pink, violet);
+  min-height: 80%;
+  min-width: 80%;
+  padding: 40px 120px 108px 108px;
+  background: linear-gradient(  rosybrown, peachpuff);
 }
 
 button {
-  font-size: 7px;
+  font-size: 20px;
+  background-color: papayawhip;
 }
 
 #main-content {
@@ -20,18 +27,19 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.3);
-  padding: 15px 20px 18px 18px;
+  border: 1px solid white;
+  background: peachpuff;
+  padding: 90px 120px 108px 108px;
   border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+  box-shadow: 2px 5px 5px saddlebrown;
 }
 
 #list {
-  margin: 10px;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.75);
+
+  margin: 80px;
+  border: 1px solid saddlebrown;
+  background: papayawhip;
   padding: 15px 20px 18px 18px;
   border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+  box-shadow: 2px 5px 5px rosybrown;
 }
